"Other Locations" offers to open properties of drives which are not mounted
Affected version
- Nightly flatpak: Yes
- Other:
Steps to reproduce
- Go to "Other Locations"
- Right click a storage point which is not mounted
- Select Properties
Current behavior
It does nothing.
Expected behavior
The "Properties" menu item should be disabled if drive is not mounter.
Additional information
Edited by António Fernandes