gtkplacesview: Do not show properties menu for unmounted drives

As described in #2412, the Other Locations context menu currently shows a useless
Properties option when an unmounted drive is right-clicked. Adds a check
when enabling the Properties widget to ensure it is only enabled if a drive is mounted
and/or is the root filesystem (the root case must be handled separately as the mount
field is not set in the GtkPlacesViewRow representing the root filesystem)

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/2412